--- a/modules/index.html
+++ b/modules/index.html
@@ -9,7 +9,7 @@
 <title>Modules from psguy.me</title></head>
 <body>
     <header class="gl-navbar">
-    <a href="/">psguy.me</a><a href="/scripts">Scripts</a><a href="https://github.com/GeeLaw/psguy.me/modules" target="_blank">Repository</a></header>
+    <a href="/">psguy.me</a><a href="/scripts">Scripts</a><a href="https://github.com/GeeLaw/psguy.me/tree/master/modules" target="_blank">Repository</a></header>
     <div class="gl-contentview">
         <article class="markdown-body" id="content">
             <div>
@@ -28,9 +28,9 @@ Modules from psguy.me</h1>
         <footer class="markdown-body">
             <p>Copyright © 2016 by Gee Law. All rights reserved.</p>
         </footer>
-        <iframe class="gl-accessibility-helper-iframe">
-        </iframe>
     </div>
+    <iframe class="gl-accessibility-helper-iframe">
+    </iframe>
     <script src="/assets/scripts/gl-frame.js" type="text/javascript"></script>
 
 
