--- a/scripts/WinConsole/index.html
+++ b/scripts/WinConsole/index.html
@@ -9,7 +9,7 @@
 <title>WinConsole</title></head>
 <body>
     <header class="gl-navbar">
-    <a href="/scripts">Scripts</a><a href="https://github.com/GeeLaw/psguy.me/scripts/WinConsole" target="_blank">Repository</a></header>
+    <a href="/scripts">Scripts</a><a href="https://github.com/GeeLaw/psguy.me/tree/master/scripts/WinConsole" target="_blank">Repository</a></header>
     <div class="gl-contentview">
         <article class="markdown-body" id="content">
             <div>
@@ -51,9 +51,9 @@ Configurability</h2>
         <footer class="markdown-body">
             <p>Copyright © 2016 by Gee Law. All rights reserved.</p>
         </footer>
-        <iframe class="gl-accessibility-helper-iframe">
-        </iframe>
     </div>
+    <iframe class="gl-accessibility-helper-iframe">
+    </iframe>
     <script src="/assets/scripts/gl-frame.js" type="text/javascript"></script>
 
 
