A new homepage. Make site hash readable for human.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@ I’m a PowerShell guy!</h1>
 
 <p>Welcome to psguy.me!</p>
 
+<p>This is a site by Gee Law, mainly for documentation of my PowerShell scripts and modules. Some of them are available from PowerShell Gallery.</p>
+
 <p>The content provided here might be licensed differently. Please read the license for each resource to see which license is used.</p>
+
+<h2>
+Find me on</h2>
+
+<ul>
+<li><a href="https://www.powershellgallery.com/profiles/GeeLaw">PowerShell Gallery</a></li>
+<li><a href="https://github.com/GeeLaw">GitHub</a></li>
+<li><a href="https://www.linkedin.com/in/geelaw">LinkedIn</a></li>
+<li><a href="http://weibo.com/geelaw">Sina Weibo</a></li>
+</ul>
 
             </div>
         </article>
