--- a/scripts/oobe.then/license.html
+++ b/scripts/oobe.then/license.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html><head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="IE_RM_OFF" content="true">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +37,4 @@ oobe.then: License</h1>
     </div>
     <iframe class="gl-accessibility-helper-iframe">
     </iframe>
-    <script src="/assets/scripts/gl-frame.js" type="text/javascript"></script>
-
-
-</body></html>
+    <script src="/assets/scripts/gl-frame.js" type="text/javascript"></script></body></html>
