--- a/site-builder/static/404.html
+++ b/site-builder/static/404.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link href="/assets/styles/404.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-        <div class="console">
-            <pre><code><span class="prompt">PS C:\></span> <span class="cmdlet">Invoke-WebRequest</span> <span class="iwr-uri string-literal"></span>
+<!DOCTYPE html><html><head><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="IE_RM_OFF" content="true"/><meta http-equiv="content-type" content="text/html; charset=utf-8"/><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><style>*{-ms-high-contrast-adjust:none;}body{margin:0px;padding:0px;background:rgb(1,36,86);font-family:Consolas,Menlo,'Courier New',Courier,monospace,"DengXian","PingFang SC";color:rgb(255,255,255);height:100vh;overflow:hidden;}body *{font-family:inherit;}pre{margin:0px;word-break:break-all;word-wrap:break-word;white-space:-pre;white-space:-moz-pre;white-space:-o-pre;white-space:pre;}.console{margin:0px;font-size:1.5em;}@media screen and (min-width:800px){.console{font-size:2em;}}.prompt{color:rgb(255,255,255);}.cmdlet{color:rgb(255,255,0);}.string-literal{color:rgb(0,128,128);}.ellipsis{display:inline-block;white-space:nowrap;text-overflow:ellipsis;}.error{color:rgb(255,0,0);background:rgb(0,0,0);}.indent{float:left;height:6400px;}footer{position:fixed;vertical-align:bottom;bottom:0px;margin:0px;padding:0px;width:100vw;background:rgb(255,255,255);text-align:center;-ms-high-contrast-adjust:auto;}footer>*{-ms-high-contrast-adjust:auto;}.go-home{display:inline-block;text-decoration:none;color:transparent;}.go-home:visited{color:transparent;}.go-home-hc{display:none;border-style:solid;border-width:1px;text-decoration:none;margin:10px;padding:20px;}@media screen and (-ms-high-contrast:active){.go-home{display:none;}.go-home-hc{display:inline-block;}.go-home-hc:hover{text-decoration:underline;}footer{border-width:2px 0px 0px 0px;border-style:solid;}}</style></head><body><div class="console"><pre><code><span class="prompt">PS C:\></span> <span class="cmdlet">Invoke-WebRequest</span> <span class="iwr-uri string-literal"></span>
 <div class="error">Invoke-WebRequest: Not Found
 HTTP Error 404. The requested resource is not found.
 At line:1 char:1
@@ -16,32 +6,4 @@ At line:1 char:1
 <span class="ellipsis">+ ~~~~~~~~~~~~~~~~~~<span class="iwr-uri" data-gl-underline="~"></span></span>
 <span><div class="indent">   </div><span> + CategoryInfo          : InvalidOperation: (System.Net.HttpWebRequest:HttpWebRequest) [Invoke-WebRequest], WebException
  + FullyQualifiedErrorId : WebCmdletWebResponseException,Microsoft.PowerShell.Commands.InvokeWebRequestCommand</span></span></div>
- </code></pre>
-        </div>
-        <footer>
-            <a class="go-home" href="/"><img src="/assets/images/home.png" style="zoom: 25%;"/></a>
-            <a class="go-home-hc" href="/">Go to psguy.me</a>
-        </footer>
-        <script type="text/javascript">
-            (function ()
-            {
-                var uri = window.location.href;
-                if (uri.indexOf("'") >= 0)
-                {
-                    uri = '"' + uri.replace(/`/g, '``').replace(/"/g, '`"').replace(/\r/g, '`r').replace(/\n/g, '`n').replace(/\t/g, '`t').replace(/\v/g, '`v') + '"';
-                }
-                else
-                {
-                    uri = "'" + uri + "'";
-                }
-                var urilines = uri.match(/.*/g)[0].replace(/./g, '~');
-                var uris = document.getElementsByClassName('iwr-uri');
-                for (var i = 0; i < uris.length; ++i)
-                    if (uris[i].getAttribute('data-gl-underline') == '~')
-                        uris[i].innerText = urilines;
-                    else
-                        uris[i].innerText = uri;
-            })();
-        </script>
-    </body>
-</html>
+ </code></pre></div><footer><a class="go-home" href="/"><img src="/assets/images/home.png" style="zoom: 25%;"/></a><a class="go-home-hc" href="/">Go to psguy.me</a></footer><script type="text/javascript">(function (){var uri=window.location.href;if(uri.indexOf("'")>=0)uri='"'+uri.replace(/`/g,'``').replace(/"/g,'`"').replace(/\r/g,'`r').replace(/\n/g,'`n').replace(/\t/g,'`t').replace(/\v/g,'`v') + '"';else uri="'"+uri+"'";var urilines=uri.match(/.*/g)[0].replace(/./g,'~');var uris=document.getElementsByClassName('iwr-uri');for(var i=0;i<uris.length;++i)if(uris[i].getAttribute('data-gl-underline') == '~')uris[i].innerText=urilines;else uris[i].innerText=uri;})();</script></body></html>
