--- a/scripts/WinConsole/index.html
+++ b/scripts/WinConsole/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html><head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta http-equiv="Content-Type" content="Type=text/html; charset=utf-8">
     <meta name="IE_RM_OFF" content="true">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/assets/styles/github-markdown.css" rel="stylesheet" type="text/css">
     <link href="/assets/styles/gl-float.css" rel="stylesheet" type="text/css">
@@ -55,6 +54,5 @@ Configurability</h2>
             <p>Copyright © 2016 by Gee Law. All rights reserved.</p>
         </footer>
     </div>
-    <iframe class="gl-accessibility-helper-iframe">
-    </iframe>
+    <iframe class="gl-accessibility-helper-iframe"></iframe>
     <script src="/assets/scripts/gl-frame.js" type="text/javascript"></script></body></html>
