--- a/site-builder/template.html
+++ b/site-builder/template.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta http-equiv="Content-Type" content="Type=text/html; charset=utf-8" />
     <meta name="IE_RM_OFF" content="true" />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/assets/styles/github-markdown.css" type="text/css" rel="stylesheet" />
     <link href="/assets/styles/gl-float.css" type="text/css" rel="stylesheet" />
@@ -35,8 +34,7 @@
             <p>Copyright &copy; 2016 by Gee Law. All rights reserved.</p>
         </footer>
     </div>
-    <iframe class="gl-accessibility-helper-iframe">
-    </iframe>
+    <iframe class="gl-accessibility-helper-iframe"></iframe>
     <script type="text/javascript" src="/assets/scripts/gl-frame.js"></script>
 </body>
 </html>
