--- a/modules/index.html
+++ b/modules/index.html
@@ -23,6 +23,7 @@ Modules from psguy.me</h1>
 <ul>
 <li><a href="CommonAliases">CommonAliases</a></li>
 <li><a href="CommonUtilities">CommonUtilities</a></li>
+<li><a href="Build-Markdown">Build-Markdown</a></li>
 </ul>
 
             </div>
