Simplify accessible style.

--- a/modules/Build-Markdown/index.html
+++ b/modules/Build-Markdown/index.html
@@ -18,7 +18,7 @@
                 <h1>
 Build-Markdown</h1>
 
-<figure class="gl-float-right" style="margin: 0px;"><img src="assets/icon.png" style="zoom: 80%;"></figure>
+<figure class="gl-float-right" style="margin: 0px; text-align: center;"><img src="assets/icon.png" style="zoom: 80%;"></figure>
 
 <p>A static site builder based on PowerShell and GitHub Markdown API.</p>
 
