--- a/scripts/oobe.then/license.html
+++ b/scripts/oobe.then/license.html
@@ -18,7 +18,7 @@
                 <h1>
 oobe.then: License</h1>
 
-<figure class="gl-float-right" style="margin: 0px;"><img class="gl-accessible-high-contrast-forbidden" src="assets/high-contrast-forbidden/icon.png" style="zoom: 80%;"><img class="gl-accessible-high-contrast-fallback" src="assets/high-contrast-fallback/icon.png" style="zoom: 80%;"><img class="gl-accessible-high-contrast-black-on-white" src="assets/high-contrast-black-on-white/icon.png" style="zoom: 80%;"><img class="gl-accessible-high-contrast-white-on-black" src="assets/high-contrast-white-on-black/icon.png" style="zoom: 80%;"></figure>
+<figure class="gl-float-right" style="margin: 0px; text-align: center;"><img class="gl-accessible-high-contrast-forbidden" src="assets/high-contrast-forbidden/icon.png" style="zoom: 80%;"><img class="gl-accessible-high-contrast-fallback" src="assets/high-contrast-fallback/icon.png" style="zoom: 80%;"><img class="gl-accessible-high-contrast-black-on-white" src="assets/high-contrast-black-on-white/icon.png" style="zoom: 80%;"><img class="gl-accessible-high-contrast-white-on-black" src="assets/high-contrast-white-on-black/icon.png" style="zoom: 80%;"></figure>
 
 <p>Copyright © 2016 by Gee Law</p>
 
