Use a better placeholder technique. Simplify accessible style.

--- a/site-builder/template.html
+++ b/site-builder/template.html
@@ -16,18 +16,7 @@
     <div class="gl-contentview">
         <article id="content" class="markdown-body">
             <div>
-                <div id="placeholder">
-                    <h1>Lorem Ipsum</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate augue elit, nec iaculis lectus vehicula non. Phasellus aliquet erat diam, sed semper ante mattis nec. Mauris efficitur leo mollis neque aliquam bibendum. Pellentesque pulvinar, ipsum in viverra congue, tellus enim tincidunt diam, nec convallis lorem velit vitae justo. Integer sollicitudin scelerisque sapien, a tempus mauris cursus sed. Phasellus porttitor dui libero, id commodo libero fringilla at. Donec cursus vehicula consequat.</p>
-                    <h2>Mauris vitae lectus euismod...</h2>
-                    <p>... ornare turpis et, lobortis neque. Nullam quis tortor id enim bibendum consectetur. Nunc sed scelerisque augue. Sed vestibulum tincidunt elit, sit amet aliquet ligula condimentum sed. Aliquam ac sem dui. Proin non leo ut metus sollicitudin pretium. Integer a mollis erat. Nulla congue metus nec eros varius, at pharetra lacus gravida.</p>
-                    <p>
-                    Nunc elementum sapien id magna ultrices dapibus. Praesent quis facilisis arcu. Pellentesque sit amet facilisis arcu. Sed pharetra, ligula sed rhoncus commodo, lectus nulla cursus est, vel pharetra dui mauris in elit. Vivamus erat lacus, lobortis sit amet sapien in, pretium consequat elit. Ut ut odio orci. Sed vulputate venenatis purus, ut ornare libero consequat non. Duis dapibus, tellus sit amet vestibulum condimentum, nisl risus maximus purus, vitae aliquet turpis lorem quis lectus.</p>
-                    <h2>Nunc quis...</h2>
-                    <p>... efficitur urna. Quisque tempus est vitae tempus mollis. Nulla scelerisque viverra ex, sed aliquam orci porttitor sit amet. Ut interdum luctus nisl, et pretium leo. Donec porttitor laoreet magna quis bibendum. Vivamus eget ligula iaculis, mattis lorem a, tincidunt metus. Vestibulum tempus quis est eget convallis. Phasellus ut ligula vitae risus varius tristique sed vel odio. Donec vel accumsan leo, id laoreet purus. Praesent elementum mauris quis elit rutrum, vel sollicitudin massa feugiat. Morbi commodo nulla ultrices metus blandit, ut tempor nisl pellentesque. Aliquam id venenatis odio, non finibus arcu. Curabitur vel blandit ante. Curabitur sed sapien non est rutrum elementum at ac odio.</p>
-                    <h3>Maecenas ac nunc...</h3>
-                    <p>... sed nibh varius egestas. Maecenas feugiat viverra molestie. Mauris laoreet, arcu vitae pulvinar vulputate, eros mauris feugiat eros, ac tincidunt purus nisi a elit. Etiam dignissim eleifend dui non commodo. Curabitur quis dolor id ipsum viverra fermentum pellentesque vel magna. Nam mattis orci vitae neque pretium, eu posuere lorem eleifend. Vestibulum justo risus, facilisis ac facilisis a, convallis id quam. Curabitur in accumsan erat, facilisis rhoncus massa. Etiam at eros turpis. Proin sed urna in sapien fringilla fringilla. Fusce urna mi, posuere nec ultrices ac, efficitur ac nibh. Sed quis lacinia eros. Maecenas ac mauris dolor. Etiam dapibus dolor quis lacus porta tincidunt quis ut elit. Curabitur tempor est diam, ut aliquam arcu gravida at.</p>
-                </div>
+                build-markdown-placeholder
             </div>
         </article>
         <footer class="markdown-body">
